--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "release": "standard-version"
+    "release": "standard-version --no-verify"
   },
   "keywords": [],
   "author": "",
