fix(project): fixing commit-release flow
testing whether post-commit hook makes sense

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "husky": {
     "hooks": {
-      "prepare-commit-msg": "echo \"prepare-commit-msg\"",
-      "pre-commit": "echo \"pre-commit\""
+      "prepare-commit-msg": "npm run do:commitizen",
+      "post-commit": "do:prep-release"
     }
   },
   "standard-version": {
