--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "npm run do:commitizen",
-      "post-commit": "npm run do:prep-release"
+      "prepare-commit-msg": "npm run do:commitizen"
     }
   },
   "standard-version": {
